--- a/public/static/css/components/button.css
+++ b/public/static/css/components/button.css
@@ -2,6 +2,7 @@
 .buttons {
     display: flex;
     gap: 10px;
+    margin-top: 20px;
 }
 
 .button-score {
@@ -23,27 +24,27 @@
 }
 
 .button-score.danger {
-    background-color: #E82C2C;
-    color: #F37474;
+    background-color: var(--main-black);
+    color: var(--main-white);
 }
 
 .button-score.medium {
+    background-color: #E82C2C;
+    color: var(--main-white);
+}
+
+.button-score.safe {
     background-color: #FF961B;
     color: #FFBF75;
 }
 
-.button-score.safe {
-    background-color: #2093D3;
-    color: #75CDFF;
-}
-
-.button-more-info {
+.button-more-info, .button-ignore {
     cursor: pointer;
 
     width: auto;
     height: 30px;
     
-    padding: 0 40px;
+    padding: 0 25px;
     border-radius: 15px;
 
     border: none;
@@ -51,7 +52,7 @@
 
     background-color: var(--third-gray);
 
-    font-size: 12.5px;
+    font-size: 11.5px;
     font-weight: 700;
     color: var(--main-white);
     letter-spacing: 1px;
@@ -59,12 +60,23 @@
     transition: 0.3s;
 }
 
-.button-more-info:hover {
+.button-more-info:hover, .button-ignore:hover {
     color: var(--main-black);
     background-color: var(--main-cyan);
 
     transition: 0.3s;
 }
+
+.button-more-info.open {
+    color: var(--main-black);
+    background-color: var(--main-cyan);
+}
+
+/* .button-ignore:hover {
+    background-color: #e82c2c82;
+
+    transition: 0.3s;
+} */
 
 .button-default {
     cursor: pointer;
