--- a/public/static/css/components/cards.css
+++ b/public/static/css/components/cards.css
@@ -1,6 +1,6 @@
 /* [content] cards */
 .cards {
-    width: auto; height: 55%;
+    width: auto; /* height: 55%; */
     display: flex;
     flex-wrap: wrap;
     /* gap: 20px; */
@@ -17,12 +17,18 @@
     min-width: 320px;
     width: 100%;
     /* height: auto; */
-    max-height: 180px;
+    /* max-height: 180px; */
     display: flex;
     flex-direction: column;
     justify-content: center;
     flex: 2;
     gap: 20px;
+
+    transition: 0.4s;
+}
+
+.card.display-none {
+    display: none;
 }
 
 .card h2 {
@@ -36,7 +42,7 @@
 .card .content {
     display: flex;
     flex-direction: column;
-    gap: 5px;
+    gap: 20px;
 
     color: var(--main-white);
 }
@@ -51,10 +57,35 @@
     font-size: 12.5px;
     font-weight: 500;
     letter-spacing: 1px;
-
+    line-height: 1.75;
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 3;
     overflow: hidden;
     text-overflow: ellipsis; 
+}
+
+.card .justification {
+    display: none;
+}
+
+.card .justification strong {
+    color: var(--main-cyan);
+}
+
+.card.open {
+    height: auto;
+    max-height: 100%;
+    justify-content: start;
+
+    transition: 0.4s;
+}
+
+.card.open .content p {
+    display: block;
+}
+
+.card.open .justification {
+    display: block;
+    margin-top: 25px;
 }
