feat: validação de conexão do usuario

--- a/public/static/css/components/navbar.css
+++ b/public/static/css/components/navbar.css
@@ -36,7 +36,7 @@
 
 .navbar ul li {
     cursor: pointer;
-
+    color: var(--second-gray);
     display: flex;
     flex-direction: column;
     align-items: center;
